# NetflixCloneApp

./: .gitignore  App.tsx  README.md  docker-compose.yaml  package.json
app/: App.tsx  app.json  package-lock.json  package.json
app/app/: dashboard.tsx  index.tsx  login.tsx  signup.tsx
app/routes/: route.tsx
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs  method.rs
