[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = "1.3.1"
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls"] }
rand = "0.8.5"
dotenv = "0.15.0"
bcrypt = "0.14.0"
actix-cors = "0.6.4"
